# AnnieXMusic

./: .gitignore  .replit  Dockerfile  Procfile  README.md  Readme.md  config.py  internal_error_20260303_131047.txt  khushi_log.txt  package-lock.json  pyproject.toml  railway.toml  railway_cookies_b64.txt  replit.md  requirements.txt  start  start.py  unknown_errors.txt  web_config.py  webserver.py  youtube_cookies.txt
.agents/: agent_assets_metadata.toml
ANNIEMUSIC/: __main__.py  misc.py
KHUSHI/: __init__.py  __main__.py  misc.py  webserver.py
attached_assets/: Pasted--13-Dec-25-16-05-24-INFO-ANNIEMUSIC-core-mongo-Connecti_1766031349155.txt  Pasted--24-Mar-26-10-40-47-INFO-ANNIEMUSIC-core-mongo-Connecti_1774349132144.txt  Pasted--24-Mar-26-12-40-42-INFO-ANNIEMUSIC-core-mongo-Connecti_1774356499168.txt  Pasted--24-Mar-26-13-16-10-INFO-ANNIEMUSIC-core-mongo-Connecti_1774358898112.txt  Pasted--24-Mar-26-14-04-54-INFO-ANNIEMUSIC-core-mongo-Connecti_1774361863405.txt  Pasted--24-Mar-26-19-20-21-INFO-ANNIEMUSIC-core-mongo-Connecti_1774410133969.txt  Pasted--31-Mar-26-19-50-49-INFO-KHUSHI-utils-ytdl-smart-SmartY_1774987492583.txt  Pasted--BatBin-Traceback-most-recent-call-last-File-app-ANNIEM_1774411897883.txt  Pasted--Ignored-Error-Internal-Error-2025-12-14-09-09-20-Type-_1766031532202.txt  Pasted--Internal-Error-Captured-Error-Type-AssistantErr-Functi_1765518750528.txt  Pasted--Internal-Error-Captured-Error-Type-AssistantErr-Functi_1766060280222.txt  Pasted--Internal-Error-Captured-Error-Type-AssistantErr-Functi_1774252784326.txt  (+29 more)
scripts/: patch_pyrogram.py
(+170 files in other folders)
