[project]
name = "khushi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "deepai>=1.0.1",
    "edge-tts>=7.2.8",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.3",
    "future>=1.0.0",
    "gitpython>=3.1.47",
    "google-api-python-client>=2.194.0",
    "gpytranslate>=2.1.0",
    "gtts>=2.5.4",
    "heroku3>=5.2.1",
    "httpx[http2]==0.28.1",
    "kurigram==2.2.19",
    "lexica-api>=1.6.0",
    "motor>=3.7.1",
    "nekosbest>=1.2.0",
    "ntgcalls==2.1.0",
    "nudenet>=3.4.2",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow==12.1.1",
    "psutil>=7.2.2",
    "py-tgcalls==2.2.11",
    "pycryptodome>=3.23.0",
    "pycryptodomex>=3.23.0",
    "pydub>=0.25.1",
    "pyfiglet>=1.0.4",
    "pyshorteners>=1.0.1",
    "python-dotenv>=1.2.2",
    "python-whois>=0.9.6",
    "pyyaml>=6.0.3",
    "qrcode>=8.2",
    "requests>=2.33.1",
    "speechrecognition>=3.16.0",
    "speedtest-cli>=2.1.3",
    "spotipy>=2.26.0",
    "telegraph>=2.2.0",
    "tgcrypto>=1.2.5",
    "unidecode>=1.4.0",
    "wget>=3.2",
    "youtube-search-python",
    "yt-dlp[default]>=2026.3.17",
]

[tool.uv.sources]
youtube-search-python = { git = "https://github.com/CertifiedDevloper/youtube-search-python" }
